[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ima-bridge"
version = "0.1.0"
description = "Windows-only bridge for asking the 爱分享 ima knowledge base."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.135,<0.136",
  "playwright>=1.58,<1.59",
  "pydantic>=2.12,<3",
  "python-dotenv>=1.0,<2",
  "pywinauto>=0.6.9,<0.7",
  "tenacity>=9.1,<10",
  "uvicorn>=0.41,<0.42",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
