[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ima-bridge"
version = "0.3.0"
description = "Windows-only App CDP bridge for ima official AI."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "playwright>=1.52,<2",
  "pydantic>=2.12,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

